<resources>
    <string name="app_name">MyReceipts</string>
    <string name="myReceipts_title_hint">Enter a title for the Receipt</string>
    <string name="myReceipts_title_label">Receipt Title</string>
    <string name="myReceipts_details_label">Receipt Details</string>
    <string name="myReceipts_shopname_hint">Shop Name for the receipt</string>
    <string name="myReceipts_comments_hint">Comments</string>
    <string name="receipt_sent_label">Receipt Sent</string>
    <string name="subtitle_format">%1$d Receipts</string>


    <!-- Accessibility -->
    <string name="myReceipts_photo_button_description">Take photo of the receipt</string>
    <string name="myReceipts_photo_no_image_description"> Receipt photo (not sent)</string>
    <string name="myReceipts_photo_image_description"> Receipt photo (sent) </string>
    <string name="photo_announcement">A new receipt photo has been sent.</string>


    <!-- Dialogs -->
    <string name="dialog_time_title">Select time of receipt</string>
    <string name="dialog_date_title">Select receipt date</string>
    <string name="dialog_image_title">Image of receipt</string>
    <string name="save_button">Save</string>
    <string name="cancel_button">Cancel</string>
    <string name="myReceipts_receipt_text">Choose a Receipt</string>
    <string name="myReceipts_report_text">Send Receipt Report</string>
    <string name="myReceipts_location_text">Show in map</string>

    <!-- MyReceipts Report -->
    <string name="receipt_report">Receipts for: %1$s\n\nReceipt Date:  %2$s\n\n%3$s\n\n%4$s\n\n%5$s</string>
    <string name="receipt_report_sent">nothing more to send</string>
    <string name="myReceipts_report_shopname"> Shope Name:  </string>
    <string name="myReceipts_report_comments">Comments: </string>
    <string name="myReceipts_report_receipt">the receipt is %s.</string>
    <string name="myReceipts_report_subject">Receipt Report</string>
    <string name="send_report">Send receipts report via</string>

    <!-- MyReceipts Location -->

    <string name="myReceipts_report_location">The location of the receipt</string>
    <string name="myReceipts_latitude">Lat: </string>
    <string name="myReceipts_longitude">long: </string>

    <!-- Toolbar -->
    <string name="new_myReceipts">New</string>
    <string name="help_myReceipts">Help</string>
    <string name="delete_myReceipts">Delete Receipt</string>
    <string name="show_subtitle">Show # of Receipts</string>
    <string name="hide_subtitle">Hide # of Receipts</string>

    <plurals name="subtitle_plural">
        <item quantity="one">%1$s myReceipts</item>
        <item quantity="other">%1$s myReceipts</item>
    </plurals>

    <!-- Toast messages -->
    <string name="toast_delete_myReceipts">Receipt has been deleted</string>

    <!-- Empty List view -->
    <string name="empty_view_text_view">There are no myReceipts...yet</string>
    <string name="empty_view_add_button">create new myReceipts</string>
    <string name="myReceipts_report_call">Call Suspect</string>
    <string name="toast_no_suspect">Please choose a suspect</string>

</resources>