<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <TextView
        style="?android:listSeparatorTextViewStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/myReceipts_details_label"/>

    <EditText
        android:id="@+id/myReceipts_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/myReceipts_title_hint"/>

    <EditText
        android:id="@+id/myReceipts_shopname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/myReceipts_shopname_hint"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/myReceipts_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="4"/>


    </LinearLayout>

    <CheckBox
        android:id="@+id/crime_solved"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:text="@string/crime_solved_label"/>






</LinearLayout>